# rclean

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README_SUBMISSION.md  mcp.json  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  quality-gate.yml  release.yml  security.yml
docs/: README.md
docs/api/: MCP_API.md
docs/architecture/: PROJECT_STRUCTURE.md  deep_context.md
docs/testing/: TESTING_STRATEGY.md
docs/todo/: cluster-find-spec.md  fuzzy-matching-spec.md  rg-integration-spec.md
examples/: basic_usage.rs  cluster_analysis.rs  dataframe_analysis.rs  outliers_detection.rs  pattern_matching.rs
proptest-regressions/: property_tests.txt
src/: clustering.rs  lib.rs  main.rs  outliers.rs
src/mcp_server/: handlers.rs  server.rs
src/models/: mcp.rs
test_outliers/test_outliers/: large.txt
tests/: cli.rs  execution_mode.rs  integration_tests.rs  main_coverage.rs  mcp_handlers_coverage.rs  mcp_integration.rs  outliers_tests.rs  property_tests.rs
tests/fuzzy/: different.txt  doc_v1.txt  doc_v2.txt  doc_v3.txt  report_v1.txt  report_v2.txt
